--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+version: '3.8'
+
 services:
-  link-shortener:
+  link-shortener-backend:
     build: ./backend
-    container_name: link-shortener
+    container_name: link-shortener-backend
     ports:
       - ${API_PORT}:${API_PORT}
     networks:
@@ -10,42 +12,38 @@ services:
       - link-shortener-db
     environment:
       API_PORT: ${API_PORT}
-      NGINX_PORT: ${NGINX_PORT}
       HOST: ${HOST}
     env_file:
       - .env
 
   link-shortener-db:
-    restart: on-failure
     image: postgres
     container_name: link-shortener-db
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    volumes:
+      - linkShortenerDB:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    volumes:
-      - linkShortenerDB:/var/lib/postgresql/data
     networks:
       - link-shortener-network
     env_file:
       - .env
 
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: nginx/Dockerfile
     container_name: nginx-proxy
     ports:
       - "${NGINX_PORT}:${NGINX_PORT}"
-    volumes:
-      - ./nginx/default.conf.template:/etc/nginx/templates/default.conf.template
-    env_file:
-      - .env
     environment:
       - API_PORT=${API_PORT}
       - NGINX_PORT=${NGINX_PORT}
     depends_on:
-      - link-shortener
+      - link-shortener-backend
     networks:
       - link-shortener-network
 
