--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,11 +1,24 @@
 server {
   listen ${NGINX_PORT};
 
-  set $cors "";
-  if ($http_origin ~* ^(http://localhost:5173|http://localhost:${NGINX_PORT})$) {
-    set $cors $http_origin;
+  # /api/url-list → /url-list
+  location = /api/url-list {
+    rewrite ^/api/url-list$ /url-list break;
+    proxy_pass http://link-shortener-backend:${API_PORT};
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    if ($request_method = OPTIONS) {
+      add_header Content-Length 0;
+      add_header Content-Type text/plain;
+      return 204;
+    }
   }
 
+  # Все другие /api/** → проксируются как есть
   location /api/ {
     proxy_pass http://link-shortener-backend:${API_PORT};
     proxy_http_version 1.1;
@@ -14,13 +27,6 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    if ($cors != "") {
-      add_header 'Access-Control-Allow-Origin' "$cors" always;
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-      add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-      add_header 'Access-Control-Allow-Credentials' 'true' always;
-    }
-
     if ($request_method = OPTIONS) {
       add_header Content-Length 0;
       add_header Content-Type text/plain;
@@ -28,6 +34,7 @@ server {
     }
   }
 
+  # Короткие ссылки: /abc123 → backend
   location ~ ^/[a-zA-Z0-9_-]+$ {
     proxy_pass http://link-shortener-backend:${API_PORT};
     proxy_http_version 1.1;
@@ -36,13 +43,6 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    if ($cors != "") {
-      add_header 'Access-Control-Allow-Origin' "$cors" always;
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-      add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-      add_header 'Access-Control-Allow-Credentials' 'true' always;
-    }
-
     if ($request_method = OPTIONS) {
       add_header Content-Length 0;
       add_header Content-Type text/plain;
@@ -50,9 +50,9 @@ server {
     }
   }
 
-  location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri /index.html;
-  }
+  #location / {
+  #  root /usr/share/nginx/html;
+  #  index index.html;
+  #  try_files $uri /index.html;
+  #}
 }
