--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,24 +1,6 @@
 server {
   listen ${NGINX_PORT};
 
-  # /api/url-list → /url-list
-  location = /api/url-list {
-    rewrite ^/api/url-list$ /url-list break;
-    proxy_pass http://link-shortener-backend:${API_PORT};
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-
-    if ($request_method = OPTIONS) {
-      add_header Content-Length 0;
-      add_header Content-Type text/plain;
-      return 204;
-    }
-  }
-
-  # Все другие /api/** → проксируются как есть
   location /api/ {
     proxy_pass http://link-shortener-backend:${API_PORT};
     proxy_http_version 1.1;
@@ -26,33 +8,26 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-
-    if ($request_method = OPTIONS) {
-      add_header Content-Length 0;
-      add_header Content-Type text/plain;
-      return 204;
-    }
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Max-Age' 86400 always;
   }
 
-  # Короткие ссылки: /abc123 → backend
-  location ~ ^/[a-zA-Z0-9_-]+$ {
+  location ~ ^/(?!api/)([a-zA-Z0-9_-]+)$ {
     proxy_pass http://link-shortener-backend:${API_PORT};
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-
-    if ($request_method = OPTIONS) {
-      add_header Content-Length 0;
-      add_header Content-Type text/plain;
-      return 204;
-    }
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Max-Age' 86400 always;
   }
 
-  #location / {
-  #  root /usr/share/nginx/html;
-  #  index index.html;
-  #  try_files $uri /index.html;
-  #}
+  location / {
+    root /usr/share/nginx/html;
+    index index.html;
+    try_files $uri /index.html;
+  }
 }
