--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
-API_PORT=5000
-NGINX_PORT=8080
+API_PORT=
+NGINX_PORT=
 POSTGRES_HOST=link-shortener-db
-POSTGRES_PORT=5432
+POSTGRES_PORT=
 POSTGRES_DB=linkShortenerDB
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=soT0ypD3y1
+POSTGRES_USER=
+POSTGRES_PASSWORD=
