--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,28 +1,48 @@
 server {
   listen ${NGINX_PORT};
 
-  location /api/ {
-    proxy_pass http://link-shortener-backend:${API_PORT};
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Max-Age' 86400 always;
+  location ~ ^/[a-zA-Z0-9_-]+$ {
+      proxy_pass http://link-shortener-backend:${API_PORT};
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      if ($request_method = OPTIONS) {
+        add_header Access-Control-Allow-Headers 'Content-Type, Authorization';
+        add_header Access-Control-Allow-Methods 'GET, OPTIONS';
+        add_header Access-Control-Max-Age 86400;
+        add_header Content-Length 0;
+        add_header Content-Type text/plain;
+        return 204;
+      }
+
+      add_header Access-Control-Allow-Headers 'Content-Type, Authorization' always;
+      add_header Access-Control-Allow-Methods 'GET, OPTIONS' always;
+      add_header Access-Control-Max-Age 86400 always;
   }
 
-  location ~ ^/(?!api/)([a-zA-Z0-9_-]+)$ {
-    proxy_pass http://link-shortener-backend:${API_PORT};
+  location /api/ {
+    proxy_pass http://link-shortener-backend:${API_PORT}/api/;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-    add_header 'Access-Control-Max-Age' 86400 always;
+
+    if ($request_method = OPTIONS) {
+      add_header Access-Control-Allow-Headers 'Content-Type, Authorization';
+      add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
+      add_header Access-Control-Max-Age 86400;
+      add_header Content-Length 0;
+      add_header Content-Type text/plain;
+      return 204;
+    }
+
+    add_header Access-Control-Allow-Headers 'Content-Type, Authorization' always;
+    add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header Access-Control-Max-Age 86400 always;
   }
 
   location / {
